# Spain-grpahic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_editorial_layer.py  0003_signal_rule_revisions.py  0004_editorial_consistency_and_auth.py  0004_signal_rule_impact_previews.py  0005_signal_rule_impact_evaluations.py  0006_merge_editorial_heads.py  0007_drop_story_candidate_state.py  0008_public_story_facade.py  0009_story_candidate_chart_rationale.py  0010_public_stories_layer.py  0011_public_story_narrative_context.py
app/: __init__.py  main.py
app/api/: router.py
app/connectors/: base.py
app/core/: auth.py  config.py  job_lock.py  logging.py  middleware.py  rate_limit.py  scheduler.py
app/db/: session.py
app/models/: __init__.py  entities.py
docs/: OPERATIONS.md
public-frontend/: README.md  next.config.mjs  package-lock.json  package.json  vercel-copia-pega.txt  vitest.config.ts
scripts/: render-start.sh
static/: editorial.css
tests/: conftest.py  test_candidate_signal_traceability.py  test_chart_recommender_topics.py  test_datosgob_connector.py  test_economy_chart_recommender.py  test_editorial_auth.py  test_editorial_dashboard.py  test_editorial_end_to_end.py  test_editorial_ui_sparkline.py  test_health.py  test_postgres_integration.py  test_public_country_overview_api.py  test_public_stories_layer.py  test_signal_detector.py  test_signal_rules_api.py  test_signals_simulate_endpoint.py
(+111 files in other folders)
